--- a/app/i18n/dapp.en.i18n.json
+++ b/app/i18n/dapp.en.i18n.json
@@ -5,6 +5,8 @@
 			, "buttons": {
 				"view1": "View1"
 				, "view2": "View2"
+				, "view3": "View3"
+				, "view4": "View4"
 			}
 			, "headers": {
 				"identicon": "Identicon"
@@ -29,7 +31,7 @@
 			}
 			, "accounts": {
 				"header": "My Accounts"
-				, "description": "These are your Ethereum addresses. The identicons are generated based on the address value. Note, balance is static."			
+				, "description": "These are your Ethereum addresses. The identicons are generated based on the address value. Note, balance is static."
 			}
 			, "multiplyContract": {
 				"header": "Multiply Contract"
@@ -39,7 +41,7 @@
 				, "placeholder": "Number To Multiply"
 			}
 			, "networkHealth": {
-				"header": "Network Health"			
+				"header": "Network Health"
 			}
 		}
 		, "view1": {
@@ -49,6 +51,14 @@
 		, "view2": {
 			"title": "View 2"
 			, "defaultName": "View2"
+		}
+		, "view3": {
+			"title": "View 3"
+			, "defaultName": "View3"
+		}
+		, "view2": {
+			"title": "View 4"
+			, "defaultName": "View4"
 		}
 	}
 }
